Implemented function to add task-card into the To Do box. Made task-card draggable in box

--- a/02-Challenge/Develop/assets/css/style.css
+++ b/02-Challenge/Develop/assets/css/style.css
@@ -9,8 +9,13 @@ body {
 
 .task-card {
   margin: 0 auto;
+  border: 5px solid black;
+  height: auto;
 }
 
 .task-card:hover {
   cursor: grab;
+}
+.card-divs{
+  margin: 10px;
 }
